deployments/modules/vendelux/services/api/overlays/localkube/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
  namespace: vendelux-localkube
spec:
  hosts:
    - ""
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: api
            port:
              number: 8080
